hosting/kubernetes/oss/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: agenta-oss
  labels:
    name: agenta-oss
