hosting/kubernetes/oss/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: agenta-oss
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ghcr.io/agenta-ai/agenta-api:latest
          command:
            - "uvicorn"
            - "entrypoint:app"
            - "--host"
            - "0.0.0.0"
            - "--port"
            - "8000"
            - "--reload"
            - "--root-path"
            - "/api"
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: agenta-oss
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
