hosting/kubernetes/oss/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: agenta-oss
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16.2
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
            - name: init-db
              mountPath: /docker-entrypoint-initdb.d
          readinessProbe:
            exec:
              command:
                - "pg_isready"
                - "-U"
                - "$(POSTGRES_USER)"
                - "-d"
                - "$(POSTGRES_DB)"
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - "pg_isready"
                - "-U"
                - "$(POSTGRES_USER)"
                - "-d"
                - "$(POSTGRES_DB)"
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: init-db
          configMap:
            name: postgres-initdb-cm

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: agenta-oss
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
