hosting/kubernetes/oss/supertokens-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: supertokens
  namespace: agenta-oss
  labels:
    app: supertokens
spec:
  replicas: 1
  selector:
    matchLabels:
      app: supertokens
  template:
    metadata:
      labels:
        app: supertokens
    spec:
      enableServiceLinks: false
      containers:
        - name: supertokens
          image: registry.supertokens.io/supertokens/supertokens-postgresql
          ports:
            - containerPort: 3567
          readinessProbe:
            exec:
              command:
                - "bash"
                - "-c"
                - "exec 3<>/dev/tcp/127.0.0.1/3567 && echo -e 'GET /hello HTTP/1.1\r\nhost: 127.0.0.1:3567\r\nConnection: close\r\n\r\n' >&3 && cat <&3 | grep 'Hello'"
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            exec:
              command:
                - "bash"
                - "-c"
                - "exec 3<>/dev/tcp/127.0.0.1/3567 && echo -e 'GET /hello HTTP/1.1\r\nhost: 127.0.0.1:3567\r\nConnection: close\r\n\r\n' >&3 && cat <&3 | grep 'Hello'"
            initialDelaySeconds: 15
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: supertokens
  namespace: agenta-oss
spec:
  selector:
    app: supertokens
  ports:
    - protocol: TCP
      port: 3567
      targetPort: 3567
