hosting/kubernetes/oss/web-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: agenta-oss
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: ghcr.io/agenta-ai/agenta-web:latest
          command:
            - "/app/entrypoint.sh"
            - "node"
            - "./oss/server.js"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: agenta-oss
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
